--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-imagemin": "^5.0.3",
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.2.0",
+    "gulp-posthtml": "^3.0.4",
     "gulp-pug": "^4.0.1",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
@@ -50,7 +51,8 @@
     "gulp-svgmin": "^2.1.0",
     "gulp-uglify": "^3.0.1",
     "gulp.spritesmith": "^6.9.0",
-    "merge-stream": "^1.0.1"
+    "merge-stream": "^1.0.1",
+    "posthtml-include": "^1.2.0"
   },
   "dependencies": {
     "jquery": "^3.3.1",
